@@ -3,12 +3,11 @@ package com.cems.frontend.utils;
 import com.cems.frontend.models.User;
 import com.cems.shared.model.UserDTO;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Utility mapper for converting user DTOs into frontend user models.
  */
-public class UserMapper {
+public final class UserMapper {
 
   /**
    * Utility class constructor.
@@ -23,7 +22,7 @@ public class UserMapper {
    * @return mapped user model
    */
   public static User toModel(UserDTO dto) {
-    User user = new User();
+    final User user = new User();
     user.setId(dto.getId());
 
     user.setFirstName(dto.getFirstName());
@@ -49,8 +48,7 @@ public class UserMapper {
    */
   public static List<User> toModelList(List<UserDTO> dtos) {
     return dtos.stream()
-        .map(UserMapper::toModel)
-        .collect(Collectors.toList());
+        .map(UserMapper::toModel).toList();
   }
 }
 
